Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ color:#d4af37;
 .hero{
 height:100vh;
 background:linear-gradient(rgba(0,0,0,0.55),rgba(0,0,0,0.55)),
-url('images/boxes.jpg');
+url('boxes.jpg');
 background-size:cover;
 background-position:center;
 display:flex;
@@ -262,7 +262,7 @@ font-size:32px;
 <div class="about-container">
 
 <div>
-<img src="images/corrugated.jpg" alt="Corrugated Sheet">
+<img src="corrugated.jpg" alt="Corrugated Sheet">
 </div>
 
 <div class="about-text">
@@ -343,3 +343,4 @@ Get Directions
 
 </body>
 </html>
+
