--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact Us</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Maruti Nandan Packaging</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
