--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maruti Nandan Packaging</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -55,7 +57,7 @@
 </section>
 
 <footer>
-    © 2025 Maruti Nandan Packaging | Ahmedabad
+    © 2026 Maruti Nandan Packaging | Ahmedabad
 </footer>
 
 </body>
